# Osprey

./: .gitignore  Cargo.toml  README.md
src/: board.rs  engine.rs  lib.rs  main.rs  perft.rs  utils.rs
src/board/: board.rs  mod.rs  movegen.rs  piece_move.rs
src/board/models/: board.rs  mod.rs  piece_move.rs
src/board/services/: mod.rs  move_service.rs
src/engine/: mod.rs  perft.rs
tests/: move_test.rs  perft_test.rs
