[package]
name = "osprey"
version = "0.1.0"
edition = "2023"

include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }