[package]
name = "osprey"
version = "0.2.0"
edition = "2021"
authors = ["Lukas Anthonissen"]
description = "A command line chess engine"
keywords = ["chess", "engine", "uci"]
categories = ["games-and-entertainment", "science"]

include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }